--- a/index.html
+++ b/index.html
@@ -685,120 +685,124 @@
                 <!--=========first=========-->
                 <div
                     class="row align-items-center pt-5 flex-lg-row flex-column-reverse justify-content-between pt-4 mt-xl-5 pt-5">
-                    <div class="col-lg-6 pt-lg-0 pt-5 mt-lg-0 mt-5">
-                        <h2 class="white text-lg-start lh_5xl ff_opensans fw-bold text-center  mb-0 fs_6lg">Nvidia - AI
-                            GPU </br><span class="font-gradient">1 year 228%
-                            </span>Growth
-                        </h2>
-                        <p
-                            class="py-md-3 py-2 px-lg-0 px-sm-3 fs_xs mb-0 text-lg-start text-center lh_md fw-normal c-gray ff_opensans">
-                            NVIDIA Corporation, a powerhouse in GPU
-                            technology
-                            and AI innovation, offers investors compelling opportunities. With dominance in gaming and
-                            data
-                            center
-                            markets, NVIDIA stands poised for growth. Diversification efforts into AI, autonomous
-                            vehicles, and
-                            strategic acquisitions further bolster its potential. As a leader in technology and with a
-                            strong
-                            financial
-                            track record, NVIDIA remains a top choice for savvy investors.</p>
-                        <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup"
-                                class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
-                                more</button>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 d-flex  justify-content-lg-start justify-content-center">
-                        <div class=" position-relative z-3 ps-xl-5 ms-xl-3 d-flex ">
-                            <div class="white_bg_box">
-                                <img src="./assets//images/svg/stock-1-nividia.svg" alt="logo" class="w-100">
+                        <div class="col-lg-6 pt-lg-0 pt-5 mt-lg-0 mt-5">
+                            <h2 class="white text-lg-start lh_5xl ff_opensans fw-bold text-center  mb-0 fs_6lg">Nvidia -
+                                AI
+                                GPU </br><span class="font-gradient">1 year 228%
+                                </span>Growth
+                            </h2>
+                            <p
+                                class="py-md-3 py-2 px-lg-0 px-sm-3 fs_xs mb-0 text-lg-start text-center lh_md fw-normal c-gray ff_opensans">
+                                NVIDIA Corporation, a powerhouse in GPU
+                                technology
+                                and AI innovation, offers investors compelling opportunities. With dominance in gaming
+                                and
+                                data
+                                center
+                                markets, NVIDIA stands poised for growth. Diversification efforts into AI, autonomous
+                                vehicles, and
+                                strategic acquisitions further bolster its potential. As a leader in technology and with
+                                a
+                                strong
+                                financial
+                                track record, NVIDIA remains a top choice for savvy investors.</p>
+                            <div class="d-flex justify-content-lg-start justify-content-center"><button id="openPopup"
+                                    class="main-button mt-md-4 mt-3 c-black-100 ff_opensans lh_xsm fw-bold fs_xs">Read
+                                    more</button>
                             </div>
-                            <div class="stock_bubble-right linear_bg stock_bubble-right_bg"></div>
-                            <div class="stock_rate_right">
-                                <div class=" blur_btn  gap-3 d-flex align-items-center">
-                                    <span><img src="./assets/images/svg/rate-arrow.svg" alt="rate-arrow"
-                                            class="rate-arrow">
-                                    </span>
-                                    <p class="ff_opensans fw-bold fs_8md lh_3xl font-gradient mb-0 ">1 year 228%</p>
+                        </div>
+                        <div class="col-lg-6 d-flex justify-content-lg-start justify-content-center">
+                            <div class=" position-relative z-3 ps-xl-5 ms-xl-3 d-flex ">
+                                <div class="white_bg_box">
+                                    <img src="./assets//images/svg/stock-1-nividia.svg" alt="logo" class="w-100">
+                                </div>
+                                <div class="stock_bubble-right linear_bg stock_bubble-right_bg"></div>
+                                <div class="stock_rate_right">
+                                    <div class=" blur_btn  gap-3 d-flex align-items-center">
+                                        <span><img src="./assets/images/svg/rate-arrow.svg" alt="rate-arrow"
+                                                class="rate-arrow">
+                                        </span>
+                                        <p class="ff_opensans fw-bold fs_8md lh_3xl font-gradient mb-0 ">1 year 228%</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div id="popup" class="popup">
-                            <div class=" z-3 bgpopup overflow-x-clip position-relative">
-                                <span class="close" id="closePopup"><img src="./assets/images/svg/cross-btn.svg"
-                                        alt="popup-cross-btn"></span>
-                                <div class="row align-items-center justify-content-center">
-                                    <div
-                                        class="col-xl-6 col-lg-6 col-12 d-flex flex-column justify-content-center align-items-lg-start align-items-center">
-                                        <img src="./assets/images/svg/stock-1-nividia.svg" alt="logo1"
-                                            class="w-sm-100 mb-3">
-                                        <h3
-                                            class="ff_opensans text-lg-start text-center fs_lg lh_6xl fw-bold mb-md-3 mb-2 text-white">
-                                            AI GPU
-                                            1 year
-                                            228% </br> Growth
-                                        </h3>
-                                        <p
-                                            class="mb-0 ff_opensans max-w-445 fw-normal text-lg-start text-center fs_xs text-white lh_xsm">
-                                            NVIDIA Corporation, a powerhouse in GPU technology and AI innovation, offers
-                                            investors compelling
-                                            opportunities. With dominance in gaming and data center markets, NVIDIA
-                                            stands
-                                            poised for growth.
-                                            Diversification efforts into AI, autonomous vehicles, and strategic
-                                            acquisitions
-                                            further bolster its
-                                            potential. As a leader in technology and with a strong financial track
-                                            record,
-                                            NVIDIA remains a top
-                                            choice for savvy investors.</p>
-                                    </div>
-                                    <div
-                                        class="col-xl-6 col-lg-6 col-12 d-flex justify-content-xl-end justify-content-center mt-lg-0 mt-sm-4 mt-3">
-                                        <form id="pop1" class="popup_form formpopup_form">
-                                            <p class="mb-4 pb-1 ff_opensans fw-bold off-black3 fs_4md lh_3xl">Start
-                                                Trading with
-                                                AI Stocks !</p>
-                                            <div class="d-flex flex-sm-row flex-column gap-2 ">
+                            <div id="popup" class="popup">
+                                <div class=" z-3 bgpopup overflow-x-clip position-relative">
+                                    <span class="close" id="closePopup"><img src="./assets/images/svg/cross-btn.svg"
+                                            alt="popup-cross-btn"></span>
+                                    <div class="row align-items-center justify-content-center">
+                                        <div
+                                            class="col-xl-6 col-lg-6 col-12 d-flex flex-column justify-content-center align-items-lg-start align-items-center">
+                                            <img src="./assets/images/svg/stock-1-nividia.svg" alt="logo1"
+                                                class="w-sm-100 mb-3">
+                                            <h3
+                                                class="ff_opensans text-lg-start text-center fs_lg lh_6xl fw-bold mb-md-3 mb-2 text-white">
+                                                AI GPU
+                                                1 year
+                                                228% </br> Growth
+                                            </h3>
+                                            <p
+                                                class="mb-0 ff_opensans max-w-445 fw-normal text-lg-start text-center fs_xs text-white lh_xsm">
+                                                NVIDIA Corporation, a powerhouse in GPU technology and AI innovation,
+                                                offers
+                                                investors compelling
+                                                opportunities. With dominance in gaming and data center markets, NVIDIA
+                                                stands
+                                                poised for growth.
+                                                Diversification efforts into AI, autonomous vehicles, and strategic
+                                                acquisitions
+                                                further bolster its
+                                                potential. As a leader in technology and with a strong financial track
+                                                record,
+                                                NVIDIA remains a top
+                                                choice for savvy investors.</p>
+                                        </div>
+                                        <div
+                                            class="col-xl-6 col-lg-6 col-12 d-flex justify-content-xl-end justify-content-center mt-lg-0 mt-sm-4 mt-3">
+                                            <form id="pop1" class="popup_form formpopup_form">
+                                                <p class="mb-4 pb-1 ff_opensans fw-bold off-black3 fs_4md lh_3xl">Start
+                                                    Trading with
+                                                    AI Stocks !</p>
+                                                <div class="d-flex flex-sm-row flex-column gap-2 ">
+                                                    <div class="position-relative">
+                                                        <input required type="text" placeholder="First Name"
+                                                            class="popup_input mb-3 w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3" />
+                                                        <div
+                                                            class="error-messagetwo fs_xs text-white position-absolute bottom-0">
+                                                        </div>
+                                                    </div>
+                                                    <div class="position-relative">
+                                                        <input required type="text" placeholder="Last Name"
+                                                            class="popup_input mb-3 w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3" />
+                                                        <div
+                                                            class="error-messagetwo fs_xs text-white position-absolute bottom-0">
+                                                        </div>
+                                                    </div>
+                                                </div>
                                                 <div class="position-relative">
-                                                    <input required type="text" placeholder="First Name"
+                                                    <input required type="email" placeholder="Email"
                                                         class="popup_input mb-3 w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3" />
                                                     <div
                                                         class="error-messagetwo fs_xs text-white position-absolute bottom-0">
                                                     </div>
                                                 </div>
                                                 <div class="position-relative">
-                                                    <input required type="text" placeholder="Last Name"
-                                                        class="popup_input mb-3 w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3" />
-                                                    <div
-                                                        class="error-messagetwo fs_xs text-white position-absolute bottom-0">
-                                                    </div>
+                                                    <input pattern="/^-?\d+.?\d*$/"
+                                                        onKeyPress="if(this.value.length==10) return false;" required
+                                                        type="number" placeholder="Phone Number"
+                                                        class="popup_input mb-2 mb-xl-0 w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3" />
                                                 </div>
-                                            </div>
-                                            <div class="position-relative">
-                                                <input required type="email" placeholder="Email"
-                                                    class="popup_input mb-3 w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3" />
-                                                <div
-                                                    class="error-messagetwo fs_xs text-white position-absolute bottom-0">
+                                                <div class="pt-4">
+                                                    <button aria-label="submit" type="submit"
+                                                        class="ff_opensans fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button submitTop_from popup-fromsubmisition">Start
+                                                        Trading With [Nvidia]</button>
                                                 </div>
-                                            </div>
-                                            <div class="position-relative">
-                                                <input pattern="/^-?\d+.?\d*$/"
-                                                    onKeyPress="if(this.value.length==10) return false;" required
-                                                    type="number" placeholder="Phone Number"
-                                                    class="popup_input mb-2 mb-xl-0 w-100 ff_opensans numberpopup fw-normal fs_xs text-black lh-xs mb-sm-3" />
-                                            </div>
-                                            <div class="pt-4">
-                                                <button aria-label="submit" type="submit"
-                                                    class="ff_opensans fw-bold w-100 mt-4 fs_xs text-white lh_xsm popup_button submitTop_from popup-fromsubmisition">Start
-                                                    Trading With [Nvidia]</button>
-                                            </div>
-                                        </form>
+                                            </form>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
                 <!-- ====second=====-->
                 <div class="row align-items-center pt-4 pt-md-2 mt-xl-5 pt-5 justify-content-between pt-5">
