--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                 <h2 class="white fs_2xxl mb-0 fw-bold lh_11xl text-center ff_opensans">
                     Top 7
                 </h2>
-                <h3 class="lh_7xl mb-0 text_gradient pb-md-5 pb-md-4 mb-4 fs_8xl ff_opensans text-center fw-bold">
+                <h3 class="lh_7xl mb-0 gradient_text pb-md-5 pb-md-4 mb-4 fs_8xl ff_opensans text-center fw-bold">
                     AI Stocks
                 </h3>
                 <div class="gradient-leftline"></div>
@@ -805,6 +805,7 @@
                         </div>
                 </div>
                 <!-- ====second=====-->
+                <div class="pt-xl-5">
                 <div class="row align-items-center pt-4 pt-md-2 mt-xl-5 pt-5 justify-content-between pt-5">
                     <div class="col-lg-6 pt-5 mt-md-5 d-flex   justify-content-center">
                         <div class=" position-relative  z-3 ">
@@ -916,7 +917,9 @@
 
                     </div>
                 </div>
+                </div>
                 <!-- ======third====== -->
+                <div class="pt-xl-5">
                 <div
                     class="row align-items-center flex-lg-row pt-4 pt-md-5 mt-xl-5 flex-column-reverse justify-content-between pt-5">
                     <div class="col-lg-6 pt-5 mt-5">
@@ -1031,7 +1034,9 @@
                         </div>
                     </div>
                 </div>
+                </div>
                 <!--====== fourth==========-->
+                <div class="pt-xl-5">
                 <div class="row align-items-center pt-5 pt-4 pt-md-5 mt-xl-5 justify-content-between pt-5">
                     <div class="col-lg-6 pt-5 mt-md-5 d-flex   justify-content-center">
                         <div class=" position-relative  z-3 ">
@@ -1144,7 +1149,9 @@
 
                     </div>
                 </div>
+                </div>
                 <!-- =====fifth===== -->
+                <div class="pt-xl-5">
                 <div
                     class="row align-items-center pt-5 flex-lg-row pt-4 pt-md-5 mt-xl-5 flex-column-reverse justify-content-between pt-5">
                     <div class="col-lg-6 pt-5 mt-5">
@@ -1264,7 +1271,9 @@
                         </div>
                     </div>
                 </div>
+                </div>
                 <!-- =====sixth======= -->
+                <div class="pt-xl-5">
                 <div class="row align-items-center pt-5 pt-4 pt-md-5 mt-xl-5 justify-content-between pt-5">
                     <div class="col-lg-6 pt-5 mt-md-5 d-flex   justify-content-center">
                         <div class=" position-relative  z-3 ">
@@ -1381,7 +1390,9 @@
                         </div>
                     </div>
                 </div>
+                </div>
                 <!-- ======seventh======== -->
+                <div class="pt-xl-5">
                 <div
                     class="row align-items-center flex-lg-row pt-md-5 mt-xl-5 flex-column-reverse justify-content-between pt-5">
                     <div class="col-lg-6 pt-lg-5 pt-5 mt-5">
@@ -1497,6 +1508,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
 
