--- a/index.html
+++ b/index.html
@@ -1579,21 +1579,21 @@
                             <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 mt-2 mt-sm-0 fs_lg lh-5xxl  ">Sign
                                 up
                             </h3>
-                            <p class="c-gray mb-sm-2 pb-md-2 mb-1 fw-normal max-sm-fs-10 ff_opensans fs_xs lh_md">
+                            <p class="c-gray mb-sm-2 pb-md-2 mb-1 fw-normal max-sm-fs-10 max-lh-15 ff_opensans fs_xs lh_md">
                                 Fill out the Registration Form to Get Started.
                             </p>
                             <a href="#profit"
-                                class="text-black max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Open
+                                class="text-black max-p-5 max-sm-fs-10 max-lh-15 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Open
                                 Your account</a>
                         </div>
                         <div class="position-absolute verifaction_max_w verification_position">
                             <h3 class="fw-bold text-white ff_opensans mb-sm-2 mb-1 fs_lg lh-5xxl ">Verification</h3>
-                            <p class="c-gray mb-sm-2 pb-md-2 mb-1 fw-normal max-sm-fs-10 ff_opensans fs_xs lh_md">
+                            <p class="c-gray mb-sm-2 pb-md-2 mb-1 fw-normal max-sm-fs-10 max-lh-15 ff_opensans fs_xs lh_md">
                                 Schedule a Call with Our Verified AI Trading Mentors to Guide
                                 You Through Your Investment Journey
                             </p>
                             <a href="#profit"
-                                class="text-black max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Verification
+                                class="text-black max-p-5 max-sm-fs-10 max-lh-15 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Verification
                                 Your account</a>
                         </div>
                         <div class="position-absolute investing_position">
@@ -1601,11 +1601,11 @@
                                 Start Investing
                             </h3>
                             <p
-                                class="c-gray fw-normal mb-sm-2 pb-md-2 mb-1 ff_opensans fs_xs max-sm-fs-10 lh_md text_wrap">
+                                class="c-gray fw-normal mb-sm-2 pb-md-2 mb-1 ff_opensans fs_xs max-sm-fs-10 max-lh-15 lh_md text_wrap">
                                 Begin shaping your financial future with confidence and ease.
                             </p>
                             <a href="#profit"
-                                class="text-black max-p-5 max-sm-fs-10 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Start
+                                class="text-black max-p-5 max-sm-fs-10 max-lh-15 open_ac main-button fs_sm fw-bold ff_opensans d-inline-block">Start
                                 Investing</a>
                         </div>
                     </div>
