--- a/index.html
+++ b/index.html
@@ -1345,7 +1345,7 @@
                             </div>
 
                         </div>
-                        <div id="popup6" class="popup m-3">
+                        <div id="popup6" class="popup">
                             <div class=" z-3 bgpopup overflow-x-clip position-relative">
                                 <span class="close" id="closePopup6"><img src="./assets/images/svg/cross-btn.svg"
                                         alt="popup-cross-btn"></span>
@@ -1817,7 +1817,7 @@
             </span>
             <span class="FaqBottomEllips d-block">
             </span>
-            <div class="container pb-3 py-sm-3 py-md-4 py-xl-5">
+            <div class="container py-sm-3 py-md-4 py-xl-5">
                 <div class="max_w_Faq mx-auto">
                     <h2 class="ff_opensans fw-bold fs_8xl text-white lh_7xl text-center mb-0">Frequently
                         <span class="blueGraident textBg">Asked Questions</span>
@@ -1914,11 +1914,11 @@
             </div>
         </section>
         <!--------------------------------------------------- benifit-section --------------------------------------------------->
-        <section class="position-relative pt-xl-3 mw_1920 overflow-x-clip">
+        <section class="position-relative  pt-xl-3 mw_1920 overflow-x-clip">
             <span class="ellipse_1 position-absolute d-md-block d-none"></span>
             <span class="ellipse_2 position-absolute d-md-block d-none"></span>
             <span class="ellipse_3 position-absolute d-md-block-d-none"></span>
-            <div class="container position-relative mw_990 py-xl-5 pt-md-3 mt-1">
+            <div class="container position-relative mw_990 py-xl-5 pt-5">
                 <h2
                     class="mw_733 mb-lg-80 pb-4 pb-lg-0 ff_opensans fw-bold pt-lg-5 lh_7xl fs_8xl text-white text-center mx-auto">
                     How to <span class="font-gradient">Benefit</span> By Investing In <br class="d-none d-md-block" />
@@ -2113,7 +2113,7 @@
                     one of our AI mentors will contact you, No <br class="d-none d-sm-block"> Experience Required!</p>
                 <div id="profit"
                     class="row align-items-center pt-2 pt-md-4 pt-lg-5 mt-lg-3 min_h flex-column-reverse flex-lg-row">
-                    <div class="col-12 col-lg-6 pt-4 pt-lg-0">
+                    <div class="col-12 col-lg-6 pt-4 mt-md-2 mt-lg-0 pt-lg-0">
                         <div class="AiStockCard mx-auto">
                             <h3 class="ff_opensans fw-semibold fs_4md white text-center mb-0">Start Trading with AI
                                 Stocks !
