--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,7 @@
 
                         </div>
                         <div class="col-lg-6 pt-5 mt-5">
-                            <h2 class="white text-lg-start text-center lh_md ff_opensans fw-bold mb-0 fs_6lg">UI Path -
+                            <h2 class="white text-lg-start text-center lh_6xl ff_opensans fw-bold mb-0 ">UI Path -
                                 Robotic Automations
                                  
                                 </br><span class="font-gradient">1 year 82%
